[package]
name = "pg-rust"
version = "0.1.0"
authors = ["luke"]
edition = "2018"
rustc-link-search = ["C:\\postgres\\lib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4.3", features = ["postgres"] }
actix-web = "1.0.9"
dotenv = "0.15.0"
